# aibit-pylibs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: hooks.json
.claude/commands/: rule2hook.md
.github/workflows/: publish-dev.yml  publish-release.yml
src/aibit_pylibs/: __init__.py  auth.py  dvc_utils.py  file_util.py  file_utils.py  git_utils.py  gitea_provider.py  logging.py  retry.py
src/pylibs/: __init__.py  git_utils.py
